# spitz

./: .gitignore  CMakeLists.txt  Makefile  README.md  barray.h  cfifo.c  jobmanager.h  log.c
examples/: CMakeLists.txt  Makefile  pi.c  pi.cpp
spitz/: CMakeLists.txt  Makefile  barray.c  cfifo.h  jobmanager.c  jobmanager.h  main.c  message.c  message.h  spitz.c  spitz.h  spitz.hpp  stream.hpp
